# kitwin

./: Cargo.toml  README.md  build.rs
src/: audio.rs  capture.rs  config.rs  diff.rs  ffmpeg.rs  input.rs  kitty.rs  layout.rs  main.rs  renderer.rs  session.rs  wm.rs
